--- a/style.css
+++ b/style.css
@@ -143,6 +143,7 @@ input{
     color: #fff;
     padding: 20px;
     background-color: #161515;
+    box-shadow: 1px 1px 20px white, -1px -1px 20px white ;
 
 }
 .services h2:hover{
