--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ input{
     padding: 20px;
     width: 85%;
     margin: 0px auto;
-    box-shadow: 1px 1px 20px white, -1px -1px 20px white ;
+    box-shadow: 1px 1px 20px #171717, -1px -1px 20px #171717 ;
 }
 
 .about h3{
